--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 body{
     width: 100%;
+    background-color: rgb(242, 242, 242);
     position: relative;
 }
 .nav-header{
@@ -75,6 +76,7 @@ body{
     background-color: white;
     display: flex;
 }
+
 .search input{
     outline: 0;
     font-size: 13px;
@@ -91,18 +93,37 @@ body{
     /* color:orange ; */
     font-weight: bold;
 }
-
+.navSection{
+    position:sticky;
+    z-index: 5;
+    width: 100%;
+}
 .sec1{
     padding: 20px;
+    display: flex;
+    gap: 20px;
 }
 .caroSection{
-    width: 70%;
+    width: 70% ;
+}
+.carousel-item img{
+    height: 400px;
 }
 .caroCircleBtn{
     height: 15px !important;
     width: 15px !important;
     border-radius: 50%;
     background-color: orangered !important;
+}
+.caroAds{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 30%;
+    gap: 20px;
+}
+.caroAds img{
+    width: 100%;
+    border-radius: 10px;
 }
 .thisNav .dropNavContent{
     padding: 10px;
@@ -142,14 +163,17 @@ body{
 }
 .thirdnav-content{
  padding: 15px;
- box-shadow: 0px 0px 2px 0px gray;
+ background-color: white;
+ box-shadow: 0px 0px 10px 0px rgb(201, 200, 200);
  border-radius: 5px;
  width: 16.7%;
  justify-content: center;
  font-size: 13px;
 }
 .dealCon{
-    padding: 20px;
+    margin:0 20px;
+    border-radius: 20px;
+    background-color: white;
 }
 .dealConNav{
     border-radius: 10px 10px 0 0;
@@ -159,6 +183,9 @@ body{
     animation-name: nav;
     animation-duration: 1000ms;
     animation-iteration-count: infinite;
+}
+.mobileNavs{
+    display: none;
 }
 @keyframes nav {
     0%{
@@ -177,15 +204,22 @@ body{
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
     gap: 20px;
+    padding: 20px;
     justify-content: space-between;
 }
 .productParentContainer .productContainer img{
     width: 100px;
 }
 .productContainer{
+    display: flex;
+    gap: 20px;
     width: 100%;
+    padding: 30px;
 }
+.productContainer:hover{
+    box-shadow: 0px 0px 10px 0px rgb(161, 160, 160);
 
+}
 /* Style The Dropdown Button */
 
   
@@ -223,8 +257,76 @@ body{
   .dropdown:hover .dropdown-content {
     display: block;
   }
-  
-/* .dropContentDisp{
+  .sec2{
+    overflow-x: scroll;
+    display: flex;
     width: 100%;
-    position: relative;
-} */
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: white;
+  }
+  .sec2 img{
+    width: 200px;
+  }
+
+  @media screen and (max-width:1000px){
+    .mobileNavs{
+        display: block;
+        width: 100%;
+        /* padding: 0px 20px; */
+        background-color: white;
+    }
+    .navSection{
+        display: none;
+    }
+    .mobileNav{
+        padding:0 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .searchCon{
+        padding:0 10px;
+        margin-bottom: 10px;
+    }
+    .search2{
+        padding: 10px;
+        width: 100%;
+        background-color: rgb(236, 233, 233);
+        display: flex;
+    }
+    .search2 input{
+        font-size: 12px;
+    }
+    .sec1{
+        display: block;
+        
+    }
+    .caroSection{
+        width: 100%;
+        margin-bottom: 20px;;
+    }
+    .caroSection img{
+        height: 200px;
+    }
+    .caroAds{
+        width: 100%;
+    }
+    .thirdnav{
+        display: none;
+    }
+    .productParentContainer{
+        width: 100%;
+        display: flex;
+        gap: 20px;
+        overflow-x: scroll;
+    }
+    .productContainer{
+        display: block;
+    }
+    .productParentContainer .productContainer img{
+        width: 70px;
+    }
+  }
