--- a/style.css
+++ b/style.css
@@ -270,6 +270,10 @@ body{
   .sec2 img{
     width: 200px;
   }
+  .sec3{
+    padding: 20px;
+    background-color: white;
+  }
 
   @media screen and (max-width:1024px){
     .mobileNavs{
