--- a/style.css
+++ b/style.css
@@ -317,6 +317,10 @@ body{
 .logoSec img{
     width: 100%;
 }
+.desktopFooter{
+    background-color: black;
+    color: white;
+}
   @media screen and (max-width:1024px){
     .mobileNavs{
         padding-top: 50px;
