--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ body{
     width: 100%;
 }
 .desktopFooter{
-    background-color: black;
+    background-color: rgb(34, 32, 32);
     color: white;
 }
   @media screen and (max-width:1024px){
