--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body{
     width: 100%;
     background-color: rgb(242, 242, 242);
+    margin: 0;
     position: relative;
 }
 .nav-header{
@@ -68,7 +69,8 @@ body{
     background-color: rgb(22, 2, 152);
     color: white;
     font-size: 13px;
-    padding: 0px 20px;
+    width: 100;
+    padding: 0px 0px;
 }
 .search{
     padding: 10px;
@@ -126,12 +128,14 @@ body{
     border-radius: 10px;
 }
 .thisNav .dropNavContent{
-    padding: 10px;
+    /* padding: 10px; */
+    padding: 10px 20px;
 }
 .thisNav .dropNavContent:hover{
     background-color: white;
     cursor: pointer;
     font-weight: bold;
+    /* padding: 0 20px; */
     color: rgb(72, 16, 156);
 
 }
@@ -219,44 +223,7 @@ body{
 .productContainer:hover{
     box-shadow: 0px 0px 10px 0px rgb(161, 160, 160);
 
-}
-/* Style The Dropdown Button */
-
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    /* position: relative; */
-    display: inline-block;
-    /* width: 100%; */
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    width: 100%;
-    left: 0;
-
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+} 
   .sec2{
     overflow-x: scroll;
     display: flex;
@@ -350,12 +317,21 @@ font-size: 13px;
 }
 .browser-btn button{
     border-radius: 50%;
-    height: 20px;
-    width: 20px;
+    height: 50px;
+    width: 50px;
+    font-size: 22px;
+    color: white;
+    background-color: rgb(65, 64, 64);
 }
-.browser-btn button i {
-    margin
+
+#dropContainer{
+    height: 500px;
+    background-color:whitesmoke;
+    width: 100%;
+    display: none;
+    position: absolute;
 }
+
   @media screen and (max-width:1024px){
     .mobileNavs{
         padding-top: 50px;
@@ -445,5 +421,58 @@ font-size: 13px;
     }
     .card{
         min-width: 59%;
+      }
+
+      /* SIDE NAVBAR OFFCANVAS*/
+      .sidebar {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 60px;
+      }
+      
+      .sidebar a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
+      
+      .sidebar a:hover {
+        color: #f1f1f1;
+      }
+      
+      .sidebar .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+      }
+      
+      .openbtn {
+        font-size: 20px;
+        cursor: pointer;
+        background-color: #111;
+        color: white;
+        padding: 10px 15px;
+        border: none;
+      }
+      
+      .openbtn:hover {
+        background-color: #444;
+      }
+      
+      #main {
+        transition: margin-left .5s;
+        padding: 16px;
       }
   }
