--- a/style.css
+++ b/style.css
@@ -354,8 +354,7 @@ font-size: 13px;
     position: fixed;
     z-index: 5;
     top: 0;
-    /* background-color: rgba(0,0,0, 0.9); */
-    /* top: 0; */
+    padding: 10px;
     left: 0;
     background-color:white;
     overflow-x: hidden;
@@ -384,6 +383,7 @@ font-size: 13px;
 .closebtn {
     margin: 0;
     display: none;
+    font-size: 23px;
     transition: 0.5s;
   }
     .mobileNavs{
@@ -398,6 +398,7 @@ font-size: 13px;
     }
     .mobileNav{
         top: 0;
+        height: 50px;
         padding:0 10px;
         display: flex;
         background-color: rgb(72, 16, 156);
@@ -406,8 +407,34 @@ font-size: 13px;
         justify-content: space-between;
         align-items: center;
     }
+    .loginOut{
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+    }
+    .loginOut button{
+        width: 44%;
+        border-radius: 5px;
+        color: rgb(72, 16, 156);
+        font-size: 13px;
+        padding: 8px;
+        border: 1px solid rgb(72, 16, 156);
+        background-color: transparent;
+
+    }
     .iconNav{
         color: white;
+    }
+    .fourpart{
+        border: 1px  solid rgb(219, 216, 216);
+        border-left: none;
+        border-right: none;
+        margin-top: 7px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        justify-content: center;
     }
     .searchCon{
         padding:0 10px;
