--- a/style.css
+++ b/style.css
@@ -354,7 +354,6 @@ font-size: 13px;
     position: fixed;
     z-index: 5;
     top: 0;
-    padding: 10px;
     left: 0;
     background-color:white;
     overflow-x: hidden;
@@ -408,6 +407,7 @@ font-size: 13px;
         align-items: center;
     }
     .loginOut{
+        padding: 10px;
         width: 100%;
         align-items: center;
         justify-content: center;
@@ -428,13 +428,25 @@ font-size: 13px;
     }
     .fourpart{
         border: 1px  solid rgb(219, 216, 216);
+        border-bottom: 1px  solid rgb(219, 216, 216);
         border-left: none;
         border-right: none;
-        margin-top: 7px;
         display: grid;
         grid-template-columns: 1fr 1fr;
         align-items: center;
         justify-content: center;
+    }
+    .categories div{
+        width: 100%;
+        border-bottom: 1px  solid rgb(219, 216, 216);
+        display: flex;
+        margin: 0;
+        justify-content: space-between;
+        padding: 12px 20px;
+    }
+    .categories p{
+        margin: 0;
+        font-size: 13px;
     }
     .searchCon{
         padding:0 10px;
