--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding:0;
     margin:0;
     box-sizing: border-box;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 body{
     width: 100%;
@@ -241,6 +241,7 @@ body{
     padding: 20px;
     background-color:white ;
   }
+  
   .adsContainer{
     padding: 20px;
     /* outline:1px solid red; */
@@ -340,13 +341,9 @@ font-size: 13px;
 .resFooter{
     display: none;
 }
-
-
-
-
-
 .meganavbar {
     overflow: hidden;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -374,7 +371,8 @@ font-size: 13px;
     background-color: #f9f9f9;
     width: 100%;
     left: 0;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    height: 73vh;
+    box-shadow: 0px 20px 50px 0px black;
     z-index: 1;
   }
   
@@ -390,7 +388,7 @@ font-size: 13px;
   
   /* Create three equal columns that floats next to each other */
   .column {
-    float: left;
+    /* float: left; */
     width: 33.33%;
     padding: 10px;
     background-color: #ccc;
