i did login btn and or

--- a/style.css
+++ b/style.css
@@ -443,7 +443,23 @@ font-size: 13px;
     outline: 1px solid gray;
     border: none;
 }
+.straightLine{
+    height: 1px;
+    position: relative;
 
+    width: 100%;
+    background-color:rgb(219, 219, 219);
+}
+.straightLine p{
+    margin: 0;
+    top: -15px;
+    right:50%;
+    background-color: white;
+    padding: 5px;
+    position: absolute;
+    text-align: center;
+    border: solid 1px rgb(219, 219, 219);
+}
   @media screen and (max-width:1024px){
     /* ============================SIDE NAV-======================= */
 .overlay {
