--- a/style.css
+++ b/style.css
@@ -461,7 +461,60 @@ font-size: 13px;
     position: absolute;
     text-align: center;
     border: solid 1px rgb(219, 219, 219);
-} @media screen and (max-width:1024px){
+}
+/* Dropdown Button */
+.dropbtn {
+  color: white;
+  background-color: transparent;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    transition: 1s;
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content2 {
+  display: none;
+  transition: 1s;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content2 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content2 a:hover {
+    background-color: #ddd;
+    color: rgb(72, 16, 156);
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content2 {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color:white;
+    transition: 1s;
+    color: rgb(72, 16, 156);
+}
+
+
+@media screen and (max-width:1024px){
     /* ============================SIDE NAV-======================= */
 .overlay {
     height: 0;
