--- a/style.css
+++ b/style.css
@@ -590,7 +590,9 @@ font-size: 13px;
     text-decoration: none;
     color: black;
 }
-
+.placeConatiner{
+    background-color: white;
+}
 
 
 @media screen and (max-width:1024px){
